# IFEM-CoSTA

./: CMakeLists.txt  CoSTA-HeatEquation.C  CoSTAModule.h  CoSTA_AdvectionDiffusion.C  CoSTA_Darcy.C  CoSTA_HeatEquation.C  IFEM_CoSTA.C  README.md  setup.py.in
Test/: DarcySquare.xinp  DarcyTransportSquare.xinp  DarcyTwoFieldSquare.xinp  Square-abd1-ad.xinp  Square-heat.xinp  test.py  test_AdvectionDiffusion.py  test_Darcy.py  test_HeatEquation.py
doc/: CoSTA.dox.in  Doxyfile.in
jenkins/: build.sh
